--- a/Lomotif-IosTask/Base.lproj/Main.storyboard
+++ b/Lomotif-IosTask/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="ukH-q8-XMN">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="55p-N8-2ew">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
@@ -7,17 +7,17 @@
         <!--PlayList-->
         <scene sceneID="yg3-0d-V3n">
             <objects>
-                <viewController id="55p-N8-2ew" userLabel="PlayList" sceneMemberID="viewController">
+                <viewController id="55p-N8-2ew" userLabel="PlayList" customClass="ViewController" customModule="Lomotif_IosTask" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="jcS-C2-sjf">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="81" sectionHeaderHeight="22" sectionFooterHeight="22" id="1QU-by-ivw">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="548"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="tableCell" rowHeight="78" id="SuB-7A-OjM" customClass="TableCell" customModule="Lomotif_IosTask" customModuleProvider="target">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="CustomCell" rowHeight="78" id="SuB-7A-OjM" customClass="CustomCell" customModule="Lomotif_IosTask" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="22" width="320" height="78"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="SuB-7A-OjM" id="RHF-ap-Th5">
@@ -35,13 +35,6 @@
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="y6r-wi-2jl">
-                                                    <rect key="frame" x="180" y="52" width="68" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="c9R-5N-MJJ">
                                                     <rect key="frame" x="93" y="9" width="155" height="43"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -52,15 +45,15 @@
                                             </subviews>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <outlet property="nameLabel" destination="c9R-5N-MJJ" id="ofV-6i-6zl"/>
-                                            <outlet property="prepTimeLabel" destination="y6r-wi-2jl" id="xRu-mz-7EK"/>
-                                            <outlet property="thumbnailImageView" destination="x2x-s2-ANx" id="6JV-jf-Jed"/>
+                                            <outlet property="imageview" destination="x2x-s2-ANx" id="ddv-jI-mrl"/>
+                                            <outlet property="name" destination="Reh-hZ-CBR" id="SeL-J4-2cI"/>
+                                            <outlet property="title" destination="c9R-5N-MJJ" id="RQ5-bk-fqZ"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
                                 <connections>
-                                    <outlet property="dataSource" destination="55p-N8-2ew" id="inR-9b-QEV"/>
-                                    <outlet property="delegate" destination="55p-N8-2ew" id="GBk-b0-0ap"/>
+                                    <outlet property="dataSource" destination="55p-N8-2ew" id="Yif-SC-q4d"/>
+                                    <outlet property="delegate" destination="55p-N8-2ew" id="QYL-oU-52k"/>
                                 </connections>
                             </tableView>
                         </subviews>
@@ -71,6 +64,7 @@
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <connections>
                         <outlet property="searchDisplayController" destination="JMQ-KC-MJL" id="n6y-bz-vdm"/>
+                        <outlet property="tableView" destination="1QU-by-ivw" id="VCp-9P-gm6"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IsR-WK-Udv" sceneMemberID="firstResponder"/>
@@ -83,21 +77,35 @@
                     </connections>
                 </searchDisplayController>
             </objects>
-            <point key="canvasLocation" x="1943" y="426"/>
+            <point key="canvasLocation" x="1961" y="132"/>
         </scene>
-        <!--View Controller-->
-        <scene sceneID="Nuo-uH-eCx">
+        <!--Table View Controller-->
+        <scene sceneID="8cL-Vh-ARa">
             <objects>
-                <viewController id="ukH-q8-XMN" customClass="ViewController" customModule="Lomotif_IosTask" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="xE1-gc-WCS">
+                <tableViewController id="6tU-Oi-r3L" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="1lx-vr-C65">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="ewW-Lb-2Xw" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="4Ph-9U-SAm">
+                                <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="4Ph-9U-SAm" id="BWs-aR-XMU">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="6tU-Oi-r3L" id="Y9D-Ql-ZU2"/>
+                            <outlet property="delegate" destination="6tU-Oi-r3L" id="ptl-rw-XaX"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="KeM-2t-grG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2394" y="132"/>
+            <point key="canvasLocation" x="2303" y="132"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
