--- a/Lomotif-IosTask/Base.lproj/Main.storyboard
+++ b/Lomotif-IosTask/Base.lproj/Main.storyboard
@@ -36,7 +36,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="c9R-5N-MJJ">
-                                                    <rect key="frame" x="93" y="9" width="155" height="43"/>
+                                                    <rect key="frame" x="93" y="9" width="219" height="43"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -78,6 +78,29 @@
                 </searchDisplayController>
             </objects>
             <point key="canvasLocation" x="1932" y="99"/>
+        </scene>
+        <!--Songs Search-->
+        <scene sceneID="Hk2-Pw-srH">
+            <objects>
+                <viewController storyboardIdentifier="SongsSearchSTB" id="EV1-Qw-0LL" userLabel="Songs Search" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="FZR-FZ-n8X">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Welcome" borderStyle="roundedRect" placeholder="Enter Search Text" textAlignment="center" minimumFontSize="17" id="fQa-4n-ExJ">
+                                <rect key="frame" x="16" y="20" width="288" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="textColor" red="0.53795406649999999" green="0.77547964140000003" blue="0.77087120269999998" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
+                        <color key="backgroundColor" red="0.51882523622673993" green="0.74995810989865963" blue="0.74579415800725346" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="17L-hp-HBb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2282" y="99"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
